--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
 .heroSection {
     position: relative;
     height: 650px;
-    background: url('images/hero-bg.png') center/cover no-repeat;
+    background: url('images/hero-bg.jpg') center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
