--- a/src/style.css
+++ b/src/style.css
@@ -144,7 +144,7 @@ body {
     height: 100%;
     left: 0;
     top: 0;
-    background: url(../media/hero.jpg);
+    background: url(/media/hero.jpg);
     background-size: cover;
     background-position: center;
     z-index: 0;
